# cmu-agentic-capstone

./: .env.example  .gitignore  Dockerfile  README.md  main.py  peek_chroma.py  pyproject.toml  requirements.txt
agents/: compliance-critic.md  interpreter.md  retriever.md  sig-assistant.md  synthesizer.md
data/: download_sops.py
data/sample/: sample_sig.xlsx  sample_sop.csv
deploy/: docker-compose.openwebui.yml
openapi/: sig_agent_connector.yaml
skills/compliance-validation/: SKILL.md
skills/conflict-escalation/: SKILL.md
skills/hybrid-retrieval/: SKILL.md
skills/precedence-resolution/: SKILL.md
skills/questionnaire-fill/: SKILL.md
src/sig_agent/: __init__.py  config.py
src/sig_agent/ingestion/: __init__.py  chunking.py  indexer.py  pipeline.py  sig_text.py
src/sig_agent/io/: __init__.py  spreadsheet.py
src/sig_agent/llm/: __init__.py  client.py
src/sig_agent/mcp/: __init__.py  __main__.py  openai_compat.py  rest_api.py  service.py  setup.py  types.py  utils.py
src/sig_agent/orchestration/: __init__.py  critic_agent.py  interpreter_agent.py  orchestrator.py  retriever_agent.py  synthesizer_agent.py
src/sig_agent/reasoning/: __init__.py  beam_search.py  guardrails.py  precedence.py
src/sig_agent/retrieval/: __init__.py  hybrid_search.py
src/sig_agent/state/: __init__.py  models.py  shared_state.py
tests/: test_beam_search.py  test_guardrails.py  test_precedence.py  test_sig_ingest.py  test_sig_text.py
