[project]
name = "sig-agent"
version = "0.1.0"
description = "Multi-agent assistant that answers SIG questionnaires grounded in SOPs (SOC2)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Renato Marteleto" }]
keywords = ["compliance", "soc2", "sig", "rag", "multi-agent", "mcp"]

dependencies = [
    # orchestration & agents (per M4 tool mapping)
    "crewai>=0.51.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    # retrieval / memory
    "chromadb>=0.6.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    # azure blob storage (SOP download) + docx parsing
    "azure-storage-blob>=12.19.0",
    "python-docx>=1.1.0",
    # spreadsheet i/o
    "openpyxl>=3.1.0",
    # serving / Copilot Studio integration
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "mcp>=1.2.0",
    # utilities
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
sig-agent = "sig_agent.mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sig_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = true
